{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 10,
  "lineage": "02f91a39-e760-499f-91ee-ddc88acc95ac",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:264914792788:instance/i-097c718c9a7837f62",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-097c718c9a7837f62",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "project3-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02a5e979ec186d720"
              }
            ],
            "primary_network_interface_id": "eni-02a5e979ec186d720",
            "private_dns": "ip-10-0-1-176.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.176",
            "public_dns": "ec2-54-147-124-64.compute-1.amazonaws.com",
            "public_ip": "54.147.124.64",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c6ba9d449e476a87",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09167b44ee4f5cd92",
            "tags": {
              "Name": "project3-ec2"
            },
            "tags_all": {
              "Name": "project3-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-032cb0b3ab5b0600f"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "264914792788",
            "id": "i-097c718c9a7837f62",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:264914792788:internet-gateway/igw-0523ff0fc79f1d766",
            "id": "igw-0523ff0fc79f1d766",
            "owner_id": "264914792788",
            "region": "us-east-1",
            "tags": {
              "Name": "project3-igw"
            },
            "tags_all": {
              "Name": "project3-igw"
            },
            "vpc_id": "vpc-02d2a9c4faf1443b0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "264914792788",
            "id": "igw-0523ff0fc79f1d766",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:264914792788:route-table/rtb-0abb7eedaf3f4e5bb",
            "id": "rtb-0abb7eedaf3f4e5bb",
            "owner_id": "264914792788",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0523ff0fc79f1d766",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "project3-rt"
            },
            "tags_all": {
              "Name": "project3-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d2a9c4faf1443b0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "264914792788",
            "id": "rtb-0abb7eedaf3f4e5bb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d7170ff37bebe7b",
            "region": "us-east-1",
            "route_table_id": "rtb-0abb7eedaf3f4e5bb",
            "subnet_id": "subnet-09167b44ee4f5cd92"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "264914792788",
            "id": "rtbassoc-04d7170ff37bebe7b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:264914792788:security-group/sg-032cb0b3ab5b0600f",
            "description": "Allow SSH, HTTP, HTTPS and app ports",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-032cb0b3ab5b0600f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "project3-sg",
            "name_prefix": "",
            "owner_id": "264914792788",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "project3-sg"
            },
            "tags_all": {
              "Name": "project3-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d2a9c4faf1443b0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "264914792788",
            "id": "sg-032cb0b3ab5b0600f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:264914792788:subnet/subnet-09167b44ee4f5cd92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09167b44ee4f5cd92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "264914792788",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "project3-public-subnet"
            },
            "tags_all": {
              "Name": "project3-public-subnet"
            },
            "vpc_id": "vpc-02d2a9c4faf1443b0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "264914792788",
            "id": "subnet-09167b44ee4f5cd92",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:264914792788:vpc/vpc-02d2a9c4faf1443b0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a012ee5c389a7238",
            "default_route_table_id": "rtb-0df48df5f9e29d154",
            "default_security_group_id": "sg-0b78f90b8743a2ad7",
            "dhcp_options_id": "dopt-004241d67be877d15",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02d2a9c4faf1443b0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0df48df5f9e29d154",
            "owner_id": "264914792788",
            "region": "us-east-1",
            "tags": {
              "Name": "project3-vpc"
            },
            "tags_all": {
              "Name": "project3-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "264914792788",
            "id": "vpc-02d2a9c4faf1443b0",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}